deploy/manifests/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mymetrics-app
  namespace: app-mymetrics
  labels:
    app: mymetrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mymetrics
  template:
    metadata:
      labels:
        app: mymetrics
    spec:
      containers:
      - name: mymetrics
        imagePullPolicy: Always
        image: anatolykatz/mymetrics:1.1.2
        ports:
        - containerPort: 8080
