deploy/manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mymetrics-service
  namespace: app-mymetrics
spec:
  selector:
    app: mymetrics
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
